--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: Hi, I'm Maria
-subtitle: Data Analytics + Nevada's Economy
+title: Nevada
+subtitle: Data Analytics + Research
 use-site-title: true
 ---
 
