--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: NEVADA
-subtitle: Data Analytics + Research
+title: LEARNING THE THINGS
+subtitle: Analytics + NV
 use-site-title: true
 ---
 
