--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@ layout: page
 title: LEARNING THE THINGS
 subtitle: Analytics + NV
 use-site-title: true
+bigimg:
+  - "/img/laptopandcoffee.png"
 ---
 
 <div class="posts-list">
