--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: LEARNING THE THINGS
-subtitle: Analytics + NV
+title: Learning the Things
+subtitle: ANALYTICS + NV
 use-site-title: true
 bigimg:
   - "/img/laptopandcoffee.png"
