--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Learning the Things
 subtitle: ANALYTICS + NV
 use-site-title: true
 bigimg:
-  - "/img/laptopandcoffee.png"
+  - "/img/wheelerpeak.jpg"
 ---
 
 <div class="posts-list">
