--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Learning the Things
-subtitle: ANALYTICS + NV
+subtitle: ANALYTICS + TANGENTS
 use-site-title: true
 bigimg:
   - "/img/wheelerpeak.jpg"
