Update index image

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Learning the Things
 subtitle: ANALYTICS + TANGENTS
 use-site-title: true
 bigimg:
-  - "/img/wheelerpeak.jpg"
+  - "/img/mgcourthouse.JPG"
 ---
 
 <div class="posts-list">
